--- a/testapidocs/src-html/org/microbean/jpa/TestPersistenceUnitNameAcquisition.html
+++ b/testapidocs/src-html/org/microbean/jpa/TestPersistenceUnitNameAcquisition.html
@@ -65,42 +65,36 @@
 <span class="sourceLineNo">057</span>  @Inject<a name="line.57"></a>
 <span class="sourceLineNo">058</span>  private Transaction injectedTransaction;<a name="line.58"></a>
 <span class="sourceLineNo">059</span>  <a name="line.59"></a>
-<span class="sourceLineNo">060</span>  @Inject<a name="line.60"></a>
-<span class="sourceLineNo">061</span>  private TestPersistenceUnitNameAcquisition self;<a name="line.61"></a>
+<span class="sourceLineNo">060</span>  @PersistenceContext(unitName = "test")<a name="line.60"></a>
+<span class="sourceLineNo">061</span>  private EntityManager testEm;<a name="line.61"></a>
 <span class="sourceLineNo">062</span><a name="line.62"></a>
-<span class="sourceLineNo">063</span>  @PersistenceContext(unitName = "test")<a name="line.63"></a>
-<span class="sourceLineNo">064</span>  private EntityManager testEm;<a name="line.64"></a>
-<span class="sourceLineNo">065</span><a name="line.65"></a>
-<span class="sourceLineNo">066</span>  @Inject<a name="line.66"></a>
-<span class="sourceLineNo">067</span>  private DataSource test;<a name="line.67"></a>
-<span class="sourceLineNo">068</span>  <a name="line.68"></a>
-<span class="sourceLineNo">069</span>  public TestPersistenceUnitNameAcquisition() {<a name="line.69"></a>
-<span class="sourceLineNo">070</span>    super();<a name="line.70"></a>
-<span class="sourceLineNo">071</span>  }<a name="line.71"></a>
-<span class="sourceLineNo">072</span><a name="line.72"></a>
-<span class="sourceLineNo">073</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final UserTransaction userTransaction) {<a name="line.73"></a>
-<span class="sourceLineNo">074</span>    assertNotNull(userTransaction);<a name="line.74"></a>
-<span class="sourceLineNo">075</span>    assertNotNull(this.injectedTransaction);<a name="line.75"></a>
-<span class="sourceLineNo">076</span>    assertNotNull(this.injectedUserTransaction);<a name="line.76"></a>
-<span class="sourceLineNo">077</span>    assertNotNull(this.self);<a name="line.77"></a>
-<span class="sourceLineNo">078</span>    assertNotNull(this.test);<a name="line.78"></a>
-<span class="sourceLineNo">079</span>    assertNotNull(this.testEm);<a name="line.79"></a>
-<span class="sourceLineNo">080</span>    this.self.frobnicate();<a name="line.80"></a>
-<span class="sourceLineNo">081</span>  }<a name="line.81"></a>
-<span class="sourceLineNo">082</span><a name="line.82"></a>
-<span class="sourceLineNo">083</span>  @Transactional(TxType.REQUIRED)<a name="line.83"></a>
-<span class="sourceLineNo">084</span>  public void frobnicate() {<a name="line.84"></a>
-<span class="sourceLineNo">085</span>    System.out.println("*** frobnicating");<a name="line.85"></a>
-<span class="sourceLineNo">086</span>    System.out.println("*** injected UserTransaction: " + this.injectedUserTransaction);<a name="line.86"></a>
-<span class="sourceLineNo">087</span>    System.out.println("*** injected transaction: " + this.injectedTransaction);<a name="line.87"></a>
-<span class="sourceLineNo">088</span>  }<a name="line.88"></a>
-<span class="sourceLineNo">089</span><a name="line.89"></a>
-<span class="sourceLineNo">090</span>  @Test<a name="line.90"></a>
-<span class="sourceLineNo">091</span>  public void testIt() throws Exception {<a name="line.91"></a>
-<span class="sourceLineNo">092</span>    main(null);<a name="line.92"></a>
-<span class="sourceLineNo">093</span>  }<a name="line.93"></a>
-<span class="sourceLineNo">094</span>  <a name="line.94"></a>
-<span class="sourceLineNo">095</span>}<a name="line.95"></a>
+<span class="sourceLineNo">063</span>  @Inject<a name="line.63"></a>
+<span class="sourceLineNo">064</span>  private DataSource test;<a name="line.64"></a>
+<span class="sourceLineNo">065</span>  <a name="line.65"></a>
+<span class="sourceLineNo">066</span>  public TestPersistenceUnitNameAcquisition() {<a name="line.66"></a>
+<span class="sourceLineNo">067</span>    super();<a name="line.67"></a>
+<span class="sourceLineNo">068</span>  }<a name="line.68"></a>
+<span class="sourceLineNo">069</span><a name="line.69"></a>
+<span class="sourceLineNo">070</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final UserTransaction userTransaction) {<a name="line.70"></a>
+<span class="sourceLineNo">071</span>    assertNotNull(userTransaction);<a name="line.71"></a>
+<span class="sourceLineNo">072</span>    assertNotNull(this.testEm);<a name="line.72"></a>
+<span class="sourceLineNo">073</span>    assertNotNull(this.test);<a name="line.73"></a>
+<span class="sourceLineNo">074</span>    this.frobnicate();<a name="line.74"></a>
+<span class="sourceLineNo">075</span>  }<a name="line.75"></a>
+<span class="sourceLineNo">076</span><a name="line.76"></a>
+<span class="sourceLineNo">077</span>  @Transactional(TxType.REQUIRED)<a name="line.77"></a>
+<span class="sourceLineNo">078</span>  public void frobnicate() {<a name="line.78"></a>
+<span class="sourceLineNo">079</span>    System.out.println("*** frobnicating");<a name="line.79"></a>
+<span class="sourceLineNo">080</span>    System.out.println("*** injected UserTransaction: " + this.injectedUserTransaction);<a name="line.80"></a>
+<span class="sourceLineNo">081</span>    System.out.println("*** injected transaction: " + this.injectedTransaction);<a name="line.81"></a>
+<span class="sourceLineNo">082</span>  }<a name="line.82"></a>
+<span class="sourceLineNo">083</span><a name="line.83"></a>
+<span class="sourceLineNo">084</span>  @Test<a name="line.84"></a>
+<span class="sourceLineNo">085</span>  public void testIt() throws Exception {<a name="line.85"></a>
+<span class="sourceLineNo">086</span>    main(null);<a name="line.86"></a>
+<span class="sourceLineNo">087</span>  }<a name="line.87"></a>
+<span class="sourceLineNo">088</span>  <a name="line.88"></a>
+<span class="sourceLineNo">089</span>}<a name="line.89"></a>
 
 
 
