--- a/testapidocs/src-html/org/microbean/jpa/TestPersistenceUnitNameAcquisition.html
+++ b/testapidocs/src-html/org/microbean/jpa/TestPersistenceUnitNameAcquisition.html
@@ -45,52 +45,54 @@
 <span class="sourceLineNo">037</span>import org.junit.Test;<a name="line.37"></a>
 <span class="sourceLineNo">038</span><a name="line.38"></a>
 <span class="sourceLineNo">039</span>import static org.junit.Assert.assertNotNull;<a name="line.39"></a>
-<span class="sourceLineNo">040</span><a name="line.40"></a>
-<span class="sourceLineNo">041</span>import static org.microbean.main.Main.main;<a name="line.41"></a>
-<span class="sourceLineNo">042</span><a name="line.42"></a>
-<span class="sourceLineNo">043</span>@ApplicationScoped<a name="line.43"></a>
-<span class="sourceLineNo">044</span>public class TestPersistenceUnitNameAcquisition {<a name="line.44"></a>
-<span class="sourceLineNo">045</span><a name="line.45"></a>
-<span class="sourceLineNo">046</span>  @Inject<a name="line.46"></a>
-<span class="sourceLineNo">047</span>  private UserTransaction injectedUserTransaction;<a name="line.47"></a>
-<span class="sourceLineNo">048</span><a name="line.48"></a>
-<span class="sourceLineNo">049</span>  @Inject<a name="line.49"></a>
-<span class="sourceLineNo">050</span>  private Transaction injectedTransaction;<a name="line.50"></a>
-<span class="sourceLineNo">051</span><a name="line.51"></a>
-<span class="sourceLineNo">052</span>  @Inject<a name="line.52"></a>
-<span class="sourceLineNo">053</span>  private TransactionManager tm;<a name="line.53"></a>
-<span class="sourceLineNo">054</span>  <a name="line.54"></a>
-<span class="sourceLineNo">055</span>  @PersistenceContext(unitName = "test")<a name="line.55"></a>
-<span class="sourceLineNo">056</span>  private EntityManager testEm;<a name="line.56"></a>
-<span class="sourceLineNo">057</span><a name="line.57"></a>
-<span class="sourceLineNo">058</span>  @Inject<a name="line.58"></a>
-<span class="sourceLineNo">059</span>  private DataSource test;<a name="line.59"></a>
-<span class="sourceLineNo">060</span>  <a name="line.60"></a>
-<span class="sourceLineNo">061</span>  public TestPersistenceUnitNameAcquisition() {<a name="line.61"></a>
-<span class="sourceLineNo">062</span>    super();<a name="line.62"></a>
-<span class="sourceLineNo">063</span>  }<a name="line.63"></a>
-<span class="sourceLineNo">064</span><a name="line.64"></a>
-<span class="sourceLineNo">065</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final UserTransaction userTransaction) {<a name="line.65"></a>
-<span class="sourceLineNo">066</span>    assertNotNull(userTransaction);<a name="line.66"></a>
-<span class="sourceLineNo">067</span>    assertNotNull(this.testEm);<a name="line.67"></a>
-<span class="sourceLineNo">068</span>    assertNotNull(this.test);<a name="line.68"></a>
-<span class="sourceLineNo">069</span>    this.frobnicate();<a name="line.69"></a>
-<span class="sourceLineNo">070</span>  }<a name="line.70"></a>
-<span class="sourceLineNo">071</span><a name="line.71"></a>
-<span class="sourceLineNo">072</span>  @Transactional(TxType.REQUIRED)<a name="line.72"></a>
-<span class="sourceLineNo">073</span>  public void frobnicate() {<a name="line.73"></a>
-<span class="sourceLineNo">074</span>    System.out.println("*** frobnicating");<a name="line.74"></a>
-<span class="sourceLineNo">075</span>    System.out.println("*** tm: " + this.tm);<a name="line.75"></a>
-<span class="sourceLineNo">076</span>    System.out.println("*** injected UserTransaction: " + this.injectedUserTransaction);<a name="line.76"></a>
-<span class="sourceLineNo">077</span>    System.out.println("*** injected transaction: " + this.injectedTransaction);<a name="line.77"></a>
-<span class="sourceLineNo">078</span>  }<a name="line.78"></a>
-<span class="sourceLineNo">079</span><a name="line.79"></a>
-<span class="sourceLineNo">080</span>  @Test<a name="line.80"></a>
-<span class="sourceLineNo">081</span>  public void testIt() throws Exception {<a name="line.81"></a>
-<span class="sourceLineNo">082</span>    main(null);<a name="line.82"></a>
-<span class="sourceLineNo">083</span>  }<a name="line.83"></a>
-<span class="sourceLineNo">084</span>  <a name="line.84"></a>
-<span class="sourceLineNo">085</span>}<a name="line.85"></a>
+<span class="sourceLineNo">040</span>import static org.junit.Assert.assertTrue;<a name="line.40"></a>
+<span class="sourceLineNo">041</span><a name="line.41"></a>
+<span class="sourceLineNo">042</span>import static org.microbean.main.Main.main;<a name="line.42"></a>
+<span class="sourceLineNo">043</span><a name="line.43"></a>
+<span class="sourceLineNo">044</span>@ApplicationScoped<a name="line.44"></a>
+<span class="sourceLineNo">045</span>public class TestPersistenceUnitNameAcquisition {<a name="line.45"></a>
+<span class="sourceLineNo">046</span><a name="line.46"></a>
+<span class="sourceLineNo">047</span>  @Inject<a name="line.47"></a>
+<span class="sourceLineNo">048</span>  private UserTransaction injectedUserTransaction;<a name="line.48"></a>
+<span class="sourceLineNo">049</span><a name="line.49"></a>
+<span class="sourceLineNo">050</span>  @Inject<a name="line.50"></a>
+<span class="sourceLineNo">051</span>  private Transaction injectedTransaction;<a name="line.51"></a>
+<span class="sourceLineNo">052</span><a name="line.52"></a>
+<span class="sourceLineNo">053</span>  @Inject<a name="line.53"></a>
+<span class="sourceLineNo">054</span>  private TransactionManager tm;<a name="line.54"></a>
+<span class="sourceLineNo">055</span>  <a name="line.55"></a>
+<span class="sourceLineNo">056</span>  @PersistenceContext(unitName = "test")<a name="line.56"></a>
+<span class="sourceLineNo">057</span>  private EntityManager testEm;<a name="line.57"></a>
+<span class="sourceLineNo">058</span><a name="line.58"></a>
+<span class="sourceLineNo">059</span>  @Inject<a name="line.59"></a>
+<span class="sourceLineNo">060</span>  private DataSource test;<a name="line.60"></a>
+<span class="sourceLineNo">061</span>  <a name="line.61"></a>
+<span class="sourceLineNo">062</span>  public TestPersistenceUnitNameAcquisition() {<a name="line.62"></a>
+<span class="sourceLineNo">063</span>    super();<a name="line.63"></a>
+<span class="sourceLineNo">064</span>  }<a name="line.64"></a>
+<span class="sourceLineNo">065</span><a name="line.65"></a>
+<span class="sourceLineNo">066</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final UserTransaction userTransaction) {<a name="line.66"></a>
+<span class="sourceLineNo">067</span>    assertNotNull(userTransaction);<a name="line.67"></a>
+<span class="sourceLineNo">068</span>    assertNotNull(this.testEm);<a name="line.68"></a>
+<span class="sourceLineNo">069</span>    assertNotNull(this.test);<a name="line.69"></a>
+<span class="sourceLineNo">070</span>    this.frobnicate();<a name="line.70"></a>
+<span class="sourceLineNo">071</span>  }<a name="line.71"></a>
+<span class="sourceLineNo">072</span><a name="line.72"></a>
+<span class="sourceLineNo">073</span>  @Transactional(TxType.REQUIRED)<a name="line.73"></a>
+<span class="sourceLineNo">074</span>  public void frobnicate() {<a name="line.74"></a>
+<span class="sourceLineNo">075</span>    assertNotNull(this.testEm);<a name="line.75"></a>
+<span class="sourceLineNo">076</span>    assertTrue(this.testEm.isJoinedToTransaction()); // JTA works<a name="line.76"></a>
+<span class="sourceLineNo">077</span>    assertNotNull(this.tm);<a name="line.77"></a>
+<span class="sourceLineNo">078</span>    assertNotNull(this.injectedUserTransaction);<a name="line.78"></a>
+<span class="sourceLineNo">079</span>    assertNotNull(this.injectedTransaction);<a name="line.79"></a>
+<span class="sourceLineNo">080</span>  }<a name="line.80"></a>
+<span class="sourceLineNo">081</span><a name="line.81"></a>
+<span class="sourceLineNo">082</span>  @Test<a name="line.82"></a>
+<span class="sourceLineNo">083</span>  public void testIt() throws Exception {<a name="line.83"></a>
+<span class="sourceLineNo">084</span>    main(null);<a name="line.84"></a>
+<span class="sourceLineNo">085</span>  }<a name="line.85"></a>
+<span class="sourceLineNo">086</span>  <a name="line.86"></a>
+<span class="sourceLineNo">087</span>}<a name="line.87"></a>
 
 
 
